@@ -1,3 +1,9 @@
+Sat Sep 15 17:32:16 CEST 2001 Daniel Veillard <daniel@veillard.com>
+
+	* libxslt/extra.c: okay the code from Norm is really non
+	  portable and break everywhere except on Sun and Linux
+	  platform. Compile it only on those targets.
+
 Sat Sep 15 06:25:02 CEST 2001 Thomas Broyer <tbroyer@ltgt.net>
 
 	* libexslt/date.c: fixed some bugs (reported by Charles Bozeman
